Fix prime to properly calculate primes.
More efficient prime implementation.
Support primes up to LDBL_MAX (from float.h)

--- a/doc/prime.pod
+++ b/doc/prime.pod
@@ -8,9 +8,9 @@ prime, fprime, nprime, fnprime - calculate primes forever
 
 #include <noreturn.h>
 
-int fnprime( FILE *I<stream>, unsigned long long int I<start> );
+int fnprime( FILE *I<stream>, long double I<start> );
 
-int nprime( unsigned long long int I<start> );
+int nprime( long double I<start> );
 
 int fprime( FILE *I<stream> );
 
@@ -18,13 +18,13 @@ int prime( void );
 
 =head1 DESCRIPTION
 
-The C<fnprime()> function calcluates primes, starting at I<start>, and printing them to I<stream> forever.
+The C<fnprime()> function calcluates primes, starting at I<start> (must be greater than 0), and printing them to I<stream> forever.
 
-The C<fprime()> function is similar, except it always starts at I<2>.
+The C<fprime()> function is similar, except it always starts at I<1>.
 
 The C<nprime()> function is similar, except it starts at I<start>, and prints to I<stdout>.
 
-The C<prime()> function is similar, except it starts at I<2>, and prints to I<stdout>.
+The C<prime()> function is similar, except it starts at I<1>, and prints to I<stdout>.
 
 =head1 RETURN VALUE
 
